# dbt-llm-tools

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.md  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.githooks/: .pre-commit-config.yaml
.github/: CODEOWNERS
.github/workflows/: lint-and-test.yml  python-publish.yml
ORM/: orm_models.py
api/: app.py
chroma.db/: chroma.sqlite3
client/: app.py  menu.py  settings.py  styles.py
client/pages/: chat.py  directory.py  vector.py
dbt_llm_tools/: __init__.py  chatbot.py  dbt_model.py  dbt_project.py  documentation_generator.py  instructions.py  vector_store.py
docs/: Makefile  conf.py  index.rst
docs/source/: conf.py  dbt_model.rst  dbt_project.rst  documentation_generator.rst  index.rst  vector_store.rst
docs/source/api/: chatbot.rst  dbt_model.rst  dbt_project.rst  vector_store.rst
notebooks/: Untitled.ipynb
ragstar/: __init__.py  chatbot.py  dbt_model.py  dbt_project.py  docbot.py  documentation_generator.py  instructions.py  types.py  vector_store.py
src/: __init__.py  chatbot.py  dbt_model.py  dbt_project.py  documentation_generator.py  types.py  vector_store.py
src/ragstar/: __init__.py  chatbot.py  dbt_model.py  dbt_project.py  documentation_generator.py  types.py  vector_store.py
streamlit/: app.py  menu.py  settings.py
streamlit/pages/: chat.py  chatbot_instructions.py  directory.py  project_config.py  vector.py
test/: test_dbt_project.py  test_documentation_generator.py  test_vector_store.py
test/test_data/valid_dbt_project/models/staging/: schema.yml
test_chroma.db/: chroma.sqlite3
tests/: conftest.py  test_dbt_model.py  test_dbt_project.py  test_documentation_generator.py  test_vector_store.py
tests/test_data/: directory.json  model_examples.py
tests/test_data/valid_dbt_project/models/: model_1.yml  model_2.yml
